--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ var json = (function() {
 // Checks the dictionary for an entry that matches 'text' and sends the SiGML code to the avatar
 function toSiGML(text){
   
-  xmlString = '<?xml version="1.0" encoding="utf-8"?><sigml><hns_sign gloss="house"><hamnosys_nonmanual><hnm_mouthpicture="hYs"/></hamnosys_nonmanual><hamnosys_manual><hamsymmlr/><hamflathand/><hamextfingerul/><hampalmd/><hamtouch/><hamhead/><hammovedr/><hamsmallmod/><hammoved/></hamnosys_manual></hns_sign></sigml>';
+  xmlString = '<?xml version="1.0" encoding="utf-8"?><sigml><hns_sign gloss="house"><hamnosys_manual><hamsymmlr/><hamflathand/><hamextfingerul/><hampalmd/><hamtouch/><hamhead/><hammovedr/><hamsmallmod/><hammoved/></hamnosys_manual></hns_sign></sigml>';
 
   // xmlString = '<?xml version="1.0" encoding="utf-8"?><sigml><hns_sign gloss="' + text + '">';
 
@@ -149,9 +149,9 @@ function toSiGML(text){
   // }
 
   // xmlString += "</hamnosys_manual></hns_sign></sigml>"
-  // console.log(xmlString);
+  console.log(xmlString);
 
-  
+
   playText(xmlString);
 }
 // function goPython(text){
