--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ $( function() {
 
   // Defines the filer that searches the list of options for matches
   function customFilter(array, terms) {
+    alert(terms);
     arrayOfTerms = terms.split(" ");
     arrayOfTerms.forEach(function (term) {
       var matcher = new RegExp("\\b" + term, "i");
@@ -90,26 +91,6 @@ $( function() {
   });
 });
 
-// Defines the function called when user presses "play" button
-function goPython(text){
-    $.ajax({
-      method: "POST",
-      url: "main.py",
-      data: JSON.stringify({"param": text}),
-      contentType: "application/json;charset=UTF-8",
-      beforeSend: function() {
-        alert(text);
-      },
-      success: function(response) {
-        playURL(response);
-        alert("It worked " + response);
-      },
-      error: function() {
-        alert('Something went wrong');
-        },
-     });
-}
-
 var json = (function() {
   var json = null;
   $.ajax({
@@ -124,33 +105,29 @@ var json = (function() {
   return json;
 })();
 
-// Checks the dictionary for an entry that matches 'text' and sends the SiGML code to the avatar
+//Checks the dictionary for an entry that matches 'text' and sends the SiGML code to the avatar
 function toSiGML(text){
   
-  // xmlString = '<?xml version="1.0" encoding="utf-8"?><sigml><hns_sign gloss="house"><hamnosys_nonmanual><hnm_mouthpicture picture="hYs"/></hamnosys_nonmanual><hamnosys_manual><hamsymmlr/><hamflathand/><hamextfingerul/><hampalmd/><hamtouch/><hamhead/><hammovedr/><hamsmallmod/><hammoved/></hamnosys_manual></hns_sign></sigml>';
-
   xmlString = '<?xml version="1.0" encoding="utf-8"?><sigml><hns_sign gloss="' + text + '">';
 
   translation = json[text];
-
-  console.log(translation);
-  // Checks whether the sign has a mouthpicture
+  
+  //Checks whether the sign has a mouthpicture
   if (translation.length == 2) {
-    sampa = translation[1];
-    xmlString += '<hamnosys_nonmanual><hnm_mouthpicture picture="' + sampa + '"/></hamnosys_nonmanual>';
+    mouthpicture = translation[1];
+    xmlString += '<hamnosys_nonmanual><hnm_mouthpicture picture="' + mouthpicture + '"/></hamnosys_nonmanual>';
   }
   
   sigml = translation[0];
   xmlString += '<hamnosys_manual>';
   sigml = sigml.split(",");
 
+  //Adds necessary syntax elements
   for (var i = 0; i < sigml.length; i++) {
     xmlString += "<" + sigml[i] + "/>";
   }
 
   xmlString += "</hamnosys_manual></hns_sign></sigml>"
-  console.log(xmlString);
-
 
   playText(xmlString);
 }
@@ -221,11 +198,6 @@ function toSiGML(text){
     <br>
     Adjust speed: <span class="CWASASpeed av0"></span>
     <br>
-    <!-- New Text: <input type="button" value="doText" onclick='playText(document.getElementById("mySiGML2").value);' /><br>
-    <textarea id="mySiGML2" class="txtaSiGMLText" rows="6" ></textarea>
-    New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
-    <input id="myURL" class="txtSiGMLURL av0" value="house.sigml" type="text" />
-    <br> -->
   </span>
 
   <!-- <script type="text/python" src="test.py"></script>
