--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ $( function() {
     alert(terms);
     arrayOfTerms = terms.split(" ");
     arrayOfTerms.forEach(function (term) {
-      var matcher = new RegExp("\\b" + term, "i");
+      var matcher = new RegExp("(\\b" + term + "|\?)", "i");
       array = $.grep(array, function (value) {
        return matcher.test(value.label || value.value || value);
       });
