interpunctie leesbaar maken voor match filter

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $( function() {
     arrayOfTerms = terms.split(" ");
     punctuation = ["?",",",".",";"];
     arrayOfTerms.forEach(function (term) {
-      if (punctuation.includes(term);) {
+      if (punctuation.includes(term)) {
         alert(term);
         var matcher = new RegExp(term, "i");
       }
