--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ function toSiGML(text){
   <span align="left" style="display: inline-block; vertical-align: top;margin:30px;">
     <form action="/action_page.php">
       <input type="checkbox" id="video" name="video" value="Video">
-      <label for="vehicle1"> Video of Sentence:</label><br>
+      <label for="vehicle1"> Video of Sentence</label><br>
       <input type="checkbox" id="freesyle" name="freesyle" value="Freestyle">
       <label for="vehicle1"> Freestyle Sentence </label><br>
     </form>
