--- a/index.html
+++ b/index.html
@@ -191,12 +191,13 @@ function toSiGML(text){
   <!--================================================================-->
 
   <span align="left" style="display: inline-block; vertical-align: top;margin:30px;">
-    <form action="/action_page.php">
-      <input type="checkbox" id="video" name="video" value="Video">
-      <label for="vehicle1"> Video of Sentence</label><br>
-      <input type="checkbox" id="freesyle" name="freesyle" value="Freestyle">
-      <label for="vehicle1"> Freestyle Sentence </label><br>
-    </form>
+    <label for="option">Choose a display option:</label>
+
+    <select name="option" id="option">
+      <option value="avatar">Play avatar</option>
+      <option value="video">Play video</option>
+      <option value="freestyle">Freestyle sentence with avatar</option>
+    </select>
     <br>
     <br>
     Enter Sentence:
