--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@ function toSiGML(text){
     <label for="option">Choose a display option:</label>
 
     <select name="option" id="option">
-      <option value="avatar">Play avatar</option>
-      <option value="video">Play video</option>
-      <option value="freestyle">Freestyle sentence with avatar</option>
+      <option value="avatar">Avatar</option>
+      <option value="video">Video</option>
+      <option value="freestyle">Freestyle with avatar</option>
     </select>
     <br>
     <br>
