--- a/index.html
+++ b/index.html
@@ -141,6 +141,15 @@ function toSiGML(text){
 function changeFunc() {
   var selectBox = document.getElementById("option");
   var selectedValue = selectBox.options[selectBox.selectedIndex].value;
+  if (selectedValue == "avatar") {
+    document.getElementById("avatar").setAttribute("class", "CWASAAvatar av0");
+  }
+  else if (selectedValue == "freestyle") {
+    document.getElementById("avatar").setAttribute("class", "CWASAAvatar av0");
+  }
+  else if (selectedValue == "video") {
+    document.getElementById("avatar").setAttribute("class", "undisplayed");
+  }
   alert(selectedValue);
 }
 
@@ -193,7 +202,7 @@ function changeFunc() {
   <!-- CWA signing avatar panel 0 -->
   <!--================================================================-->
   <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-  <span class="CWASAAvatar av0" align="right" ></span>
+  <span id="avatar" class="CWASAAvatar av0" align="right" ></span>
   <!--================================================================-->
 
   <span align="left" style="display: inline-block; vertical-align: top;margin:30px;">
