--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ var json = (function() {
   $.ajax({
     'async': false,
     'global': false,
-    'url': "exampleDict.json",
+    'url': "sentencesDict.json",
     'dataType': "json",
     'success': function(data) {
       json = data;
