huis verwijderd uit dictionary

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ $( function() {
   });
 });
 
-// Stores the json dictionary of glosses and SiGML code as a variable
+// Stores the json dictionary of translated sentences as a variable
 var json = (function() {
   var json = null;
   $.ajax({
