--- a/index.html
+++ b/index.html
@@ -183,13 +183,20 @@ function changeFunc() {
   <!--================================================================-->
 
   <span align="left" style="display: inline-block; vertical-align: top;margin:30px;">
-    <label for="option">Choose a display option:</label>
+    <p>Choose a display option:</p>
+  <input type="radio" id="avatar" name="option" value="avatar">
+  <label for="avatar">Avatar</label><br>
+  <input type="radio" id="video" name="option" value="video">
+  <label for="video">Video</label><br>
+  <input type="radio" id="freestylu" name="option" value="freestyle">
+  <label for="freestyle">Freestyle with Avatar</label>
+    <!-- <label for="option">Choose a display option:</label>
 
     <select name="option" id="option" onchange="changeFunc();">
       <option value="avatar">Avatar</option>
       <option value="video">Video</option>
       <option value="freestyle">Freestyle with avatar</option>
-    </select>
+    </select> -->
     <br>
     <br>
     Enter Sentence:
