--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@ function changeFunc() {
 
 
     <radio name="display" id="display" onchange="changeFunc();">
-      <display value="avatar" checked>Avatar</display>
-      <display value="video">Video</display>
-      <display value="freestyle">Freestyle with avatar</display>
+      <radio value="avatar" checked>Avatar</display>
+      <radio value="video">Video</display>
+      <radio value="freestyle">Freestyle with avatar</display>
     </radio>
     <br>
     <br>
