--- a/index.html
+++ b/index.html
@@ -185,19 +185,19 @@ function changeFunc() {
   <span align="left" style="display: inline-block; vertical-align: top;margin:30px;">
     <label for="option">Choose a display option:</label>
 
-  <!-- <input type="radio" id="avatar" name="display" checked value="avatar">
+  <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
   <label for="avatar">Avatar</label><br>
-  <input type="radio" id="video" name="display" value="video">
+  <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
   <label for="video">Video</label><br>
-  <input type="radio" id="freestylu" name="display" value="freestyle">
-  <label for="freestyle">Freestyle with Avatar</label> -->
+  <input type="radio" id="freestylu" name="display" value="freestyle" onclick="changeFunc(this);">
+  <label for="freestyle">Freestyle with Avatar</label>
 
 
-    <radio name="display" id="display" onchange="changeFunc();">
-      <radio value="avatar" checked>Avatar</display>
-      <radio value="video">Video</display>
-      <radio value="freestyle">Freestyle with avatar</display>
-    </radio>
+    <!-- <radio name="display" id="display" onchange="changeFunc();">
+      <display value="avatar">Avatar</display>
+      <display value="video">Video</display>
+      <display value="freestyle">Freestyle with avatar</display>
+    </radio> -->
     <br>
     <br>
     Enter Sentence:
