--- a/index.html
+++ b/index.html
@@ -183,13 +183,14 @@ function changeFunc() {
   <!--================================================================-->
 
   <span align="left" style="display: inline-block; vertical-align: top;margin:30px;">
-    <label for="option">Choose a display option:</label>
+  <label for="option">Choose a display option:</label>
+  <br>
 
-  <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
+  <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc();">
   <label for="avatar">Avatar</label><br>
-  <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
+  <input type="radio" id="video" name="display" value="video" onclick="changeFunc();">
   <label for="video">Video</label><br>
-  <input type="radio" id="freestylu" name="display" value="freestyle" onclick="changeFunc(this);">
+  <input type="radio" id="freestylu" name="display" value="freestyle" onclick="changeFunc();">
   <label for="freestyle">Freestyle with Avatar</label>
 
 
