test video embed

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ function changeFunc(myRadio) {
     document.getElementById("avatar").setAttribute("class", "CWASAAvatar av0");
   }
   else if (myRadio.value == "video") {
-    document.getElementById("avatar").setAttribute("class", "undisplayed");
+    document.getElementById("avatar").setAttribute("class", "vembedr");
   }
 }
 
