--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ function openPage(event,page){
 <!--================================================================-->
 <h3>Interface ZonMW COVID-19 Project</h3>
 
-<div class="tab">
+<div class="tab" align="center">
   <button class="tablinks" onclick="openPage(event, 'Home')">Home</button>
   <button class="tablinks" onclick="openPage(event, 'Translate')">Translate to NGT</button>
   <button class="tablinks" onclick="openPage(event, 'Software')">Software</button>
