--- a/index.html
+++ b/index.html
@@ -130,7 +130,24 @@ function changeFunc(myRadio) {
 }
 
 function openPage(event,page){
-  alert(page);
+  // Declare all variables
+  var i, tabcontent, tablinks;
+
+  // Get all elements with class="tabcontent" and hide them
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+
+  // Get all elements with class="tablinks" and remove the class "active"
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+
+  // Show the current tab, and add an "active" class to the button that opened the tab
+  document.getElementById(page).style.display = "block";
+  event.currentTarget.className += " active";
 }
 
 // function goPython(text){
@@ -184,7 +201,7 @@ function openPage(event,page){
   <button class="tablinks" onclick="openPage(event, 'Software')">Software</button>
 </div>
 
-<div id="Translate" align="center">
+<div id="Translate" class="tabcontent" align="center">
   <!-- CWA signing avatar panel 0 -->
   <!--================================================================-->
   <!-- <div class="CWASAPanel av0" align="center" ></div> -->
