--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ function openPage(event,page){
 // }
 
 //Clicks on the page set as default to make sure it is diplayed when the page is loaded
-document.getElementById("defaultOpen").click();
+
 
 </script>
 
@@ -271,5 +271,17 @@ document.getElementById("defaultOpen").click();
   <div class="SToCA" align="center" ></div>
   <!--================================================================-->
 </div>
+
+<!-- Defines the page displayed when "Home" is selected from the tab options -->
+<div id="Home" class="tabcontent" align="center">
+  <p>This webiste serves as an interface for a translation system from Dutch to Dutch sign language (NGT).</p>
+</div>
+
+<!-- Defines the page displayed when "Software" is selected from the tab options -->
+<div id="Software" class="tabcontent" align="center">
+  <p>The avatar software used for displaying the translations has been provided by John Glauert.</p>
+</div>
+
+<script>document.getElementById("defaultOpen").click();</script>
 </body>
 </html>
