--- a/index.html
+++ b/index.html
@@ -274,12 +274,12 @@ function openPage(event,page){
 
 <!-- Defines the page displayed when "Home" is selected from the tab options -->
 <div id="Home" class="tabcontent" align="center">
-  <p>This webiste serves as an interface for a translation system from Dutch to Dutch sign language (NGT).</p>
+  This webiste serves as an interface for a translation system from Dutch to Dutch sign language (NGT).
 </div>
 
 <!-- Defines the page displayed when "Software" is selected from the tab options -->
 <div id="Software" class="tabcontent" align="center">
-  <p>The avatar software used for displaying the translations has been provided by John Glauert.</p>
+  The avatar software used for displaying the translations has been provided by John Glauert.
 </div>
 
 <script>document.getElementById("defaultOpen").click();</script>
