--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@ function openPage(event,page){
     <br>
   </span>
 
-  <!-- <script type="text/python" src="test.py"></script>
-  <button id="echo" onclick='suggestions(document.getElementById("mySiGML").value);'>click !</button> -->
+  <script type="text/python" src="test.py"></script>
+  <!-- <button id="echo" onclick='suggestions(document.getElementById("mySiGML").value);'>click !</button> -->
 
   <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
   <div align="center" class="undisplayed">
