--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ function openPage(event,page){
     <input type="button" id = "play" value="Translate" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
    <!--  <input type="button" id="play" value="Translate" onclick='playURL("house.sigml");'/> -->
     <input type="button" value="Stop" onclick='CWASA.stopSiGML();' />
-    <button id="echo">freestyle</button>
+    <button id="freestyle">freestyle</button>
     <br>
     <br>
     Adjust speed: <span class="CWASASpeed av0"></span>
