--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ function openPage(event,page){
 
 
 <!--================================================================-->
-<h3>Interface ZonMW COVID-19 Project</h3>
+<h3>Interface ZonMW COVID-19 Project!</h3>
 
 <div class="tab" align="center">
   <button class="tablinks" onclick="openPage(event, 'Home')">Home</button>
