--- a/index.html
+++ b/index.html
@@ -183,15 +183,15 @@ function openPage(event,page){
 </script> -->
 
 <!-- Necessary for translating python into javascript -->
-<script src="static/brython.js"></script>
-<script src="static/brython_stdlib.js"></script>
+<!-- <script src="static/brython.js"></script>
+<script src="static/brython_stdlib.js"></script> -->
 
 
 </head>
 
-<body onload="CWASA.init(); brython(1);">
+<!-- <body onload="CWASA.init(); brython(1);"> -->
 <!-- <body onload="brython(1);"> -->
-<!-- <body onload="CWASA.init();"> -->
+<body onload="CWASA.init();">
 
 
 <!--================================================================-->
@@ -234,8 +234,8 @@ function openPage(event,page){
    <!--  <input type="button" id="play" value="Translate" onclick='playURL("house.sigml");'/> -->
     <input type="button" value="Stop" onclick='CWASA.stopSiGML();' />
 
-    <script type="text/python" src="test.py"></script>
-    <button id="freestyle">freestyle</button>
+    <!-- <script type="text/python" src="test.py"></script> -->
+    <button id="freestyle" onclick='goPython(document.getElementById("mySiGML").value);'>freestyle</button>
     
     <br>
     <br>
