--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ function openPage(event,page){
 function goPython(text){
     $.ajax({
       method: "POST",
-      url: "main.py",
+      url: "test.php",
       data: JSON.stringify({"param": text}),
       contentType: "application/json;charset=UTF-8",
       beforeSend: function() {
