--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ function goPython(text){
         alert(text);
       },
       success: function(response) {
-        // console.log (response);
-        alert(response);
+        console.log (response);
+        // alert(response);
       },
       error: function() {
         alert('Something went wrong');
