--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ function goPython(){
       //   alert(text);
       // },
       success: function(result) {
-        console.log (result);
+        console.log ("success");
         // alert(response);
       },
       error: function() {
