--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ function goPython(text){
       //   alert(text);
       // },
       success: function(result) {
-        console.log ("success");
+        console.log (result);
         // alert(response);
       },
       error: function() {
