--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ function openPage(event,page){
 function goPython(text){
     $.ajax({
       method: "POST",
-      url: "/test.php?q=" + text,
+      url: "/test.php",
       // data: JSON.stringify({"param": text}),
       // contentType: "application/json;charset=UTF-8",
       // beforeSend: function() {
