--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ function openPage(event,page){
 
 function goPython(text){
     $.ajax({
-      method: "POST",
+      method: "GET",
       url: "/test.php",
       data: {"text": text},
       // contentType: "application/json;charset=UTF-8",
