--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@ function goPython(text){
     <input type="button" value="Stop" onclick='CWASA.stopSiGML();' />
 
     <!-- <script type="text/python" src="test.py"></script> -->
-    <button id="freestyle" onclick='goPython(document.getElementById("mySiGML").value);'>freestyle</button>
-    <!-- <button id="freestyle" onclick='goPython();'>freestyle</button> -->
+    <!-- <button id="freestyle" onclick='goPython(document.getElementById("mySiGML").value);'>freestyle</button> -->
+    <button id="freestyle">freestyle</button>
     <br>
     <br>
     Adjust speed: <span class="CWASASpeed av0"></span>
