tab opties mooier

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ function goPython(text){
 
     <!-- <script type="text/python" src="test.py"></script> -->
     <!-- <button id="freestyle" onclick='goPython(document.getElementById("mySiGML").value);'>freestyle</button> -->
-    <button id="freestyle">freestyle</button>
+    <button id="freestyle">Freestyle</button>
     <br>
     <br>
     Adjust speed: <span class="CWASASpeed av0"></span>
