--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <script type="text/javascript" src="../static/jquery-3.5.1.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
+<!-- imports stylesheet for question circle -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 <script language="javascript">
 
 function playURL(surl) {
@@ -217,7 +220,7 @@ function goPython(text){
   <br>
 
   <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
-  <label for="avatar">Avatar</label><br>
+  <label for="avatar">Avatar</label><i class="fa fa-question-circle"></i><br>
   <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
   <label for="video">Video</label><br>
   <input type="radio" id="freestylu" name="display" value="freestyle" onclick="changeFunc(this);">
