--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@ function goPython(text){
   <br>
 
   <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
-  <label for="avatar">Avatar</label><i class="fa fa-question-circle" style="margin:5px" onmouseover="alert('Hoi')"></i><br>
+  <label for="avatar">Avatar</label><i class="fa fa-question-circle" style="margin:5px" onmouseover="alert('Hoi')"></i>
+  <div id="infoAvatar" class="displayInfo"></div>
+  <br>
   <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
   <label for="video">Video</label><br>
   <input type="radio" id="freestylu" name="display" value="freestyle" onclick="changeFunc(this);">
