--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@ function goPython(text){
      });
 }
 
+function displayInfo(id){
+  document.getElementById(id).setAttribute("class", "displayed");
+}
+
+function undisplayInfo(id){
+  document.getElementById(id).setAttribute("class", "undisplayed");
+}
+
 //Clicks on the page set as default to make sure it is diplayed when the page is loaded
 
 
@@ -220,8 +228,8 @@ function goPython(text){
   <br>
 
   <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
-  <label for="avatar">Avatar</label><i class="fa fa-question-circle" style="margin:5px" onmouseover="alert('Hoi')"></i>
-  <div id="infoAvatar" class="displayInfo"></div>
+  <label for="avatar">Avatar</label><i class="fa fa-question-circle" onmouseover="displayInfo('infoAvatar')" onmouseout="undisplayInfo('infoAvatar')"></i>
+  <div id="infoAvatar" class="displayInfo">This option will display the translation using an avatar</div>
   <br>
   <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
   <label for="video">Video</label><br>
