--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ function undisplayInfo(id){
 
   <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
   <label for="avatar">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar')" onmouseout="undisplayInfo('infoAvatar')"></i>
-  <div id="infoAvatar" style="width: 125px; height: 50px; background-color: #ddd;">This option will display the translation using an avatar</div>
+  <input id="infoAvatar" style="width: 125px; height: 50px; background-color: #ddd;" value="This option will display the translation using an avatar"/>
   <br>
   <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
   <label for="video">Video</label><br>
