--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@ function undisplayInfo(id){
 
   <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
   <label for="avatar">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
-  <div id="infoAvatar" class="displayInfo" style="width: 275px; text-align: center;">Displays the translation using an avatar</div>
+  <div id="infoAvatar" class="displayInfo" style="width: 275px; text-align: center;">
+    <p>Displays the translation using an avatar</p> 
+  </div>
   <br>
   <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
   <label for="video">Video</label><br>
