--- a/index.html
+++ b/index.html
@@ -228,15 +228,15 @@ function undisplayInfo(id){
   <br>
 
   <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
-  <label for="avatar">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
+  <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   <div id="infoAvatar" class="displayInfo" style="width: 275px; text-align: center;">
     <p>Displays the translation using an avatar</p> 
   </div>
   <br>
   <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
-  <label for="video">Video</label><br>
+  <label for="video" style="margin: 5px">Video</label><br>
   <input type="radio" id="freestylu" name="display" value="freestyle" onclick="changeFunc(this);">
-  <label for="freestyle">Freestyle with Avatar</label>
+  <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label>
 
     <br>
     <br>
