--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ function undisplayInfo(id){
 
   <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
   <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
-  <div id="infoAvatar" class="displayInfo" style="width: 275px; text-align: center;">
+  <div id="infoAvatar" class="undisplayed" style="width: 275px; text-align: center;">
     <p>Displays the translation using an avatar</p> 
   </div>
   <br>
