--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@ function undisplayInfo(id){
 
   <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
   <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
-  <div id="infoAvatar" class="undisplayed">
+  <span id="infoAvatar" class="undisplayed">
     <p>Displays the translation using an avatar</p> 
-  </div>
+  </span>
   <br>
   <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
   <label for="video" style="margin: 5px">Video</label><br>
