--- a/index.html
+++ b/index.html
@@ -234,9 +234,16 @@ function undisplayInfo(id){
   </span>
   <br>
   <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
-  <label for="video" style="margin: 5px">Video</label><br>
+  <label for="video" style="margin: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
+  <span id="infoAvatar" class="undisplayed">
+    <p>Displays the translation using a video</p> 
+  </span>
+  <br>
   <input type="radio" id="freestylu" name="display" value="freestyle" onclick="changeFunc(this);">
-  <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label>
+  <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
+  <span id="infoAvatar" class="undisplayed">
+    <p>Attempts to translate any sentence into NGT (experimental)</p> 
+  </span>
     <br>
     <br>
     Enter Sentence:
