--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ function changeFunc(myRadio) {
     document.getElementById("avatar").setAttribute("class", "CWASAAvatar av0");
   }
   else if (myRadio.value == "video") {
-    document.getElementById("avatar").setAttribute("class", "vembedr");
+    document.getElementById("avatar").setAttribute("class", "undisplayed");
   }
 }
 
@@ -223,6 +223,11 @@ function undisplayInfo(id){
   <span id="avatar" class="CWASAAvatar av0" align="right" ></span>
   <!--================================================================-->
 
+  <span id="video" class="prerecorded" align="right">
+
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/f7xMGTE7D5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </span>
+
   <span align="left" style="display: inline-block; vertical-align: top;margin:30px;">
   <label for="option">Choose a display option:</label>
   <br>
@@ -230,19 +235,19 @@ function undisplayInfo(id){
   <input type="radio" id="avatar" name="display" value="avatar" checked onclick="changeFunc(this);">
   <label for="avatar" style="margin: 5px">Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   <span id="infoAvatar" class="undisplayed">
-    <p>Displays the translation using an avatar</p> 
+    <p>Displays the translation using an avatar</p>
   </span>
   <br>
   <input type="radio" id="video" name="display" value="video" onclick="changeFunc(this);">
   <label for="video" style="margin: 5px">Video</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   <span id="infoAvatar" class="undisplayed">
-    <p>Displays the translation using a video</p> 
+    <p>Displays the translation using a video</p>
   </span>
   <br>
   <input type="radio" id="freestylu" name="display" value="freestyle" onclick="changeFunc(this);">
   <label for="freestyle" style="margin: 5px">Freestyle with Avatar</label><i class="fa fa-question-circle" onmouseenter="displayInfo('infoAvatar');" onmouseout="undisplayInfo('infoAvatar');"></i>
   <span id="infoAvatar" class="undisplayed">
-    <p>Attempts to translate any sentence into NGT (experimental)</p> 
+    <p>Attempts to translate any sentence into NGT (experimental)</p>
   </span>
     <br>
     <br>
@@ -270,6 +275,7 @@ function undisplayInfo(id){
 
   <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
   <div align="center" class="undisplayed">
+
     <span style="font-size: 90%;" >
       Sign/Frame:
       <input id="mySF" class="txtSF" value="0/0" type="text" />
