--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@ function toSiGML(text){
 function changeFunc(myRadio) {
   if (myRadio.value == "avatar") {
     document.getElementById("avatar").setAttribute("class", "CWASAAvatar av0");
-    document.getElementById("video").setAttribute("class", "undisplayed");
+    document.getElementById("videos").setAttribute("class", "undisplayed");
   }
   else if (myRadio.value == "freestyle") {
     document.getElementById("avatar").setAttribute("class", "CWASAAvatar av0");
-    document.getElementById("video").setAttribute("class", "undisplayed");
+    document.getElementById("videos").setAttribute("class", "undisplayed");
   }
   else if (myRadio.value == "video") {
     document.getElementById("avatar").setAttribute("class", "undisplayed");
-    document.getElementById("video").setAttribute("class", "prerecorded");
+    document.getElementById("videos").setAttribute("class", "prerecorded");
   }
 }
 
@@ -226,7 +226,7 @@ function undisplayInfo(id){
   <span id="avatar" class="CWASAAvatar av0" align="right" ></span>
   <!--================================================================-->
 
-  <span id="video" class="prerecorded" align="right">
+  <span id="videos" class="prerecorded" align="right">
 
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/f7xMGTE7D5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </span>
