onload niet embedden

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ function undisplayInfo(id){
 
 <!-- <body onload="CWASA.init(); brython(1);"> -->
 <!-- <body onload="brython(1);"> -->
-<body onload="CWASA.init();">
+<body onload="CWASA.init(); document.getElementById("videos").setAttribute("class", "undisplayed");">
 
 
 <!--================================================================-->
