--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ function undisplayInfo(id){
 
 <!-- <body onload="CWASA.init(); brython(1);"> -->
 <!-- <body onload="brython(1);"> -->
-<body onload="CWASA.init(); document.getElementById("videos").setAttribute("class", "undisplayed");">
+<body onload="CWASA.init();">
 
 
 <!--================================================================-->
@@ -226,8 +226,7 @@ function undisplayInfo(id){
   <span id="avatar" class="CWASAAvatar av0" align="right" ></span>
   <!--================================================================-->
 
-  <span id="videos" class="prerecorded" align="right">
-
+  <span id="videos" class="undisplayed" align="right">
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/f7xMGTE7D5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </span>
 
